results/SVCOMP/conversational/log-uninitialised1-2024_03_18_00_09_04.txt
class Main {
  //@ ensures \result <==> i[3] == 0;
  public static boolean f() {
    int i[] = new int[10];
    return i[3] == 0;
  }
}
/home/max/Documents/JMLGPT/tmp/uninitialised1.java:2: error: cannot find symbol
  //@ ensures \result <==> i[3] == 0;
                           ^
  symbol:   variable i
  location: class Main
1 error

class Main {
  //@ ensures \result <==> i[3] == 0;
  public static boolean f() {
    int i[] = new int[10];
    return i[3] == 0;
  }
}
/home/max/Documents/JMLGPT/tmp/uninitialised1.java:2: error: cannot find symbol
  //@ ensures \result <==> i[3] == 0;
                           ^
  symbol:   variable i
  location: class Main
1 error

class Main {
  //@ ensures \result <==> (\forall int i; 0 <= i && i < 10; i[i] == 0) && i[3] == 0;
  public static boolean f() {
    int i[] = new int[10];
    return i[3] == 0;
  }
}
/home/max/Documents/JMLGPT/tmp/uninitialised1.java:2: error: array required, but int found
  //@ ensures \result <==> (\forall int i; 0 <= i && i < 10; i[i] == 0) && i[3] == 0;
                                                             ^
/home/max/Documents/JMLGPT/tmp/uninitialised1.java:2: error: cannot find symbol
  //@ ensures \result <==> (\forall int i; 0 <= i && i < 10; i[i] == 0) && i[3] == 0;
                                                                           ^
  symbol:   variable i
  location: class Main
2 errors

class Main {
  //@ ensures \result <==> (\forall int j; 0 <= j && j < 10; i[j] == 0) && i[3] == 0;
  public static boolean f() {
    int i[] = new int[10];
    return i[3] == 0;
  }
}
/home/max/Documents/JMLGPT/tmp/uninitialised1.java:2: error: cannot find symbol
  //@ ensures \result <==> (\forall int j; 0 <= j && j < 10; i[j] == 0) && i[3] == 0;
                                                             ^
  symbol:   variable i
  location: class Main
/home/max/Documents/JMLGPT/tmp/uninitialised1.java:2: error: cannot find symbol
  //@ ensures \result <==> (\forall int j; 0 <= j && j < 10; i[j] == 0) && i[3] == 0;
                                                                           ^
  symbol:   variable i
  location: class Main
2 errors

class Main {
  //@ ensures \result <==> (\forall int j; 0 <= j && j < 10; i[j] == 0) && i[3] == 0;
  public static boolean f() {
    int i[] = new int[10];
    return i[3] == 0;
  }
}
/home/max/Documents/JMLGPT/tmp/uninitialised1.java:2: error: cannot find symbol
  //@ ensures \result <==> (\forall int j; 0 <= j && j < 10; i[j] == 0) && i[3] == 0;
                                                             ^
  symbol:   variable i
  location: class Main
/home/max/Documents/JMLGPT/tmp/uninitialised1.java:2: error: cannot find symbol
  //@ ensures \result <==> (\forall int j; 0 <= j && j < 10; i[j] == 0) && i[3] == 0;
                                                                           ^
  symbol:   variable i
  location: class Main
2 errors

class Main {
  //@ ensures \result <==> (\forall int j; 0 <= j && j < 10; i[j] == 0) && i[3] == 0;
  public static boolean f() {
    int i[] = new int[10];
    return i[3] == 0;
  }
}
/home/max/Documents/JMLGPT/tmp/uninitialised1.java:2: error: cannot find symbol
  //@ ensures \result <==> (\forall int j; 0 <= j && j < 10; i[j] == 0) && i[3] == 0;
                                                             ^
  symbol:   variable i
  location: class Main
/home/max/Documents/JMLGPT/tmp/uninitialised1.java:2: error: cannot find symbol
  //@ ensures \result <==> (\forall int j; 0 <= j && j < 10; i[j] == 0) && i[3] == 0;
                                                                           ^
  symbol:   variable i
  location: class Main
2 errors

class Main {
  //@ ensures \result <==> (\forall int j; 0 <= j && j < 10; i[j] == 0) && i[3] == 0;
  public static boolean f() {
    int i[] = new int[10];
    return i[3] == 0;
  }
}
/home/max/Documents/JMLGPT/tmp/uninitialised1.java:2: error: cannot find symbol
  //@ ensures \result <==> (\forall int j; 0 <= j && j < 10; i[j] == 0) && i[3] == 0;
                                                             ^
  symbol:   variable i
  location: class Main
/home/max/Documents/JMLGPT/tmp/uninitialised1.java:2: error: cannot find symbol
  //@ ensures \result <==> (\forall int j; 0 <= j && j < 10; i[j] == 0) && i[3] == 0;
                                                                           ^
  symbol:   variable i
  location: class Main
2 errors

class Main {
  //@ ensures \result <==> (\forall int j; 0 <= j && j < 10; i[j] == 0) && i[3] == 0;
  public static boolean f() {
    int i[] = new int[10];
    return i[3] == 0;
  }
}
/home/max/Documents/JMLGPT/tmp/uninitialised1.java:2: error: cannot find symbol
  //@ ensures \result <==> (\forall int j; 0 <= j && j < 10; i[j] == 0) && i[3] == 0;
                                                             ^
  symbol:   variable i
  location: class Main
/home/max/Documents/JMLGPT/tmp/uninitialised1.java:2: error: cannot find symbol
  //@ ensures \result <==> (\forall int j; 0 <= j && j < 10; i[j] == 0) && i[3] == 0;
                                                                           ^
  symbol:   variable i
  location: class Main
2 errors

class Main {
  //@ ensures \result <==> (\forall int j; 0 <= j && j < 10; i[j] == 0) && i[3] == 0;
  public static boolean f() {
    int i[] = new int[10];
    return i[3] == 0;
  }
}
/home/max/Documents/JMLGPT/tmp/uninitialised1.java:2: error: cannot find symbol
  //@ ensures \result <==> (\forall int j; 0 <= j && j < 10; i[j] == 0) && i[3] == 0;
                                                             ^
  symbol:   variable i
  location: class Main
/home/max/Documents/JMLGPT/tmp/uninitialised1.java:2: error: cannot find symbol
  //@ ensures \result <==> (\forall int j; 0 <= j && j < 10; i[j] == 0) && i[3] == 0;
                                                                           ^
  symbol:   variable i
  location: class Main
2 errors

class Main {
  //@ ensures \result <==> (\forall int j; 0 <= j && j < 10; i[j] == 0) && i[3] == 0;
  public static boolean f() {
    int i[] = new int[10];
    return i[3] == 0;
  }
}
/home/max/Documents/JMLGPT/tmp/uninitialised1.java:2: error: cannot find symbol
  //@ ensures \result <==> (\forall int j; 0 <= j && j < 10; i[j] == 0) && i[3] == 0;
                                                             ^
  symbol:   variable i
  location: class Main
/home/max/Documents/JMLGPT/tmp/uninitialised1.java:2: error: cannot find symbol
  //@ ensures \result <==> (\forall int j; 0 <= j && j < 10; i[j] == 0) && i[3] == 0;
                                                                           ^
  symbol:   variable i
  location: class Main
2 errors

